# learningTests

./: .gitignore  README.md
TestBatchFile/: dispMessageFunction.m  dispMessageScript.m  launchDispMessageFunction.bat  launchDispMessageScript.bat  testLaunchDispMessageScript.sh
TestCMakeLibraries/: CMakeLists.txt  commands.txt
TestCMakeLibraries/cmake/: Toolchain-dSPACE.cmake  Toolchain-mingw.cmake
TestCMakeLibraries/doc/: links.txt
TestCMakeLibraries/include/: mat.h
TestCMakeLibraries/mingw/include/: sumDouble.h
TestCMakeLibraries/platform/: dSPACE.cmake
TestCMakeLibraries/src/: main.c  sumDouble.c
TestDebugGDBVisualCode/: test.c
TestDiaryReport/: Diary.m  TestDiaryReport.m  docLinks.txt  saveCmdWinText_UTF8.m
TestFilesContentManipulation/: TestFindString.sh  TestReplaceText.sh  text.m
TestFilter/: firstOrderFilter.m  testFilter.m
TestFinancialReport/: TestGetFinancialStocksData.m  TestReport.m  stockPricesData20210518.xlsx
TestGenerateCFile/: testGenerateCFile.m
TestGenerateMatlabScript/: TestGenerateMatlabScript.m
TestGetFinancialData/: TestGetFinancialData.py  docLinks.txt  getFinancialData.py  yahooFinanceScraper.py
TestGetStockPricesData/: TestGetStockPricesData.py  getStockPricesData.py
TestGitCommits/: docLinks.txt  testGitCommits.sh  testGitDevelopIntegration.sh  testPaths.sh  testProject.sh
TestIsDirectory/: TestIsDirectory.sh
TestLaunchBashScriptFromCMD/: directLink.lnk  script.sh  testCommands.cmd
TestLinearRegression/: computeLinearRegression.m  getData.m  plotSingleTrackData.m
TestSFunctionBuilder/: bussesDefinition.m  readme.txt  testLauncher.m  testSFunctionBuilder.slx
TestSFunctionHandWrite/: compileSFunction.m  rad2Deg.c  rad2Deg.tlc  testSFunction.mdl
TestSFunctionSimulinkLib/: TestSFunctionLib.mdl  buildModel.m  compileSFunction.m  modelPaths.m  (+1 more)
(+184 files in other folders)
